--- a/index.html
+++ b/index.html
@@ -161,7 +161,31 @@
       </section>
     </main>
     <footer>
-        
+        <section class="back">
+         <div class="f">
+          <div>
+            <h1 class="foot">Lets Connect</h1>
+            <p class="footp">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+            <div>
+             <a href=""> <img  src="portfolio-resources/images/icons/facebook.png" alt=""></a>
+              <a href=""><img src="portfolio-resources/images/icons/insta.png" alt=""></a>
+             <a href=""> <img src="portfolio-resources/images/icons/twitter.png" alt=""></a>
+            </div>
+          </div>
+
+          <div class="wi">
+            <h1>Let’s Message me</h1>
+            <form action="">
+              <input type="text" placeholder="your name">
+              <p><input type="email" placeholder="email"></p>
+              <textarea name="textarea" id="" cols="30" rows="10" placeholder="massage"></textarea>
+              <p><input class="here" type="submit" value="submit"></p>
+            </form>
+          </div>
+
+         </div>
+
+        </section>
     </footer>
 </body>
     
