--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style/prottfolio.css">
+    <script src="https://kit.fontawesome.com/00d58df696.js" crossorigin="anonymous"></script>
 </head>
 <body class="open-sans-normal">
     <header class="head">
@@ -29,8 +30,10 @@
             <h4 class="banner_h4">Hi, I am</h4>
             <h1 class="banner_h1">Mary hardy</h1>
             <p class="banner_p">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-            <button class="here">download cv</button>
-            <button class="contact"><span class="con">contact</span></button>
+            <button class="here"> <i class="fa-solid fa-download"></i>
+              download cv</button>
+            <button class="contact"><span class="con"><i class="fa-solid fa-phone"></i>
+              contact</span></button>
           </div>
           <div>
             <img src="portfolio-resources/images/hardy.png" alt="">
@@ -156,7 +159,7 @@
         </div>
         </div>
         <div class="kaka">
-        <button class="minan">download cv</button>
+        <button class="minan"><i class="fa-solid fa-download"></i>download cv</button>
         </div>
       </section>
     </main>
